Fix size issues on mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body {
     background-color: antiquewhite;
     height: 100vh;
+    max-width: 100vw;
     
     display: flex;
     flex-direction: column;
@@ -25,6 +26,7 @@ body {
     justify-content: space-between;
 
     width: 600px;
+    max-width: 95vw;
 }
 
 
@@ -55,7 +57,6 @@ h1 {
 
     justify-self: center;
     margin: 0 auto;
-    margin-left: 215px;
 }
 
 .container {
@@ -85,7 +86,7 @@ h1 {
 
     text-align: center;
     align-content: center;
-    font-size: 72px;
+    /* font-size: 72px; */
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     color: var(--text-color);
